01-nmstate-install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openshift-nmstate
  name: openshift-nmstate
spec: {}
