07-dummy-ns-foo-bar.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: foo
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: bar
spec: {}
