10-frr-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ext-gw
  annotations:
    k8s.v1.cni.cncf.io/networks: '[
        {
          "name": "external-net", 
          "interface": "external0", 
          "ips": [ "198.18.112.99/24" ], 
          "default-route": [ "198.18.112.254" ]
        },
        {
          "name": "internal-net",
          "interface": "internal0", 
          "ips": [ "198.18.111.99/24" ]
        }
      ]'
  #   k8s.ovn.org/routing-namespaces: ”blue,foo”
  #   k8s.ovn.org/bfd-enabled: ""
  #   k8s.ovn.org/routing-network: ext-gw-net
spec:
  # hostNetwork: true
  containers:
  - name: frr
    image: quay.io/wcaban/frr
    # command:
    #   - sleep
    #   - infinity
    command: ["/bin/sh","-c"]
    args: ["/usr/libexec/frr/frrinit.sh start && tail -f /tmp/frr.log "]
    ports:
    - name: bfd
      containerPort: 3784
      protocol: UDP
    - name: bgp
      containerPort: 179
      protocol: TCP
    - name: rip
      containerPort: 520
      protocol: UDP
    - name: ripng
      containerPort: 521
      protocol: UDP
    - name: stats
      containerPort: 9000
      protocol: TCP
    # ServiceAccount requires "privileged" SCC
    securityContext:
      privileged: true
    volumeMounts:
    - name: config-volume
      mountPath: /etc/frr
  volumes:
    - name: config-volume
      configMap:
        name: frr-configs
  nodeSelector:
    kubernetes.io/hostname: w1
