frr-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ext-gw
  # annotations:
  #   k8s.v1.cni.cncf.io/networks: '[{ "name": "ext-gw-net", "ips": [ "192.168.216.50/24" ]}]'
  #   k8s.ovn.org/routing-namespaces: ”blue,foo”
  #   k8s.ovn.org/bfd-enabled: ""
  #   k8s.ovn.org/routing-network: ext-gw-net
spec:
  # hostNetwork: true
  containers:
  - name: frr
    image: quay.io/wcaban/frr
    # command:
    #   - sleep
    #   - infinity
    command: ["/bin/sh","-c"]
    # args: ["/usr/lib/frr/frrinit.sh start && tail -f /var/log/frr/frr.log"]
    args: ["/usr/libexec/frr/frrinit.sh start && tail -f /tmp/frr.log "]
    ports:
    - containerPort: 3784
      protocol: UDP
    securityContext:
      privileged: true
    volumeMounts:
    - name: config-volume
      mountPath: /etc/frr
  volumes:
    - name: config-volume
      configMap:
        name: frr-configs
  nodeSelector:
    kubernetes.io/hostname: w1
